# WDBEditor

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/include/WDBEditor/: CMakeLists.txt  MainWindow.hpp  PresenterParams.hpp  QLooseGIFChunk.hpp  QLooseGIFPanel.hpp  QLooseGIFView.hpp  QParameterView.hpp  QStructureView.hpp  QWorldDatabase.hpp  Util.hpp
app/src/WDBEditor/: CMakeLists.txt  MainWindow.cpp  PresenterParams.cpp  QLooseGIFChunk.cpp  QLooseGIFPanel.cpp  QLooseGIFView.cpp  QParameterView.cpp  QStructureView.cpp  QWorldDatabase.cpp  Util.cpp  main.cpp
lib/: CMakeLists.txt
lib/include/libWDB/: BinaryTreeNode.hpp  CMakeLists.txt  Color.hpp  GIFChunk.hpp  GIFImage.hpp  Group.hpp  NodeType.hpp  ParseResult.hpp  Parser.hpp  Serializer.hpp  SubGroup.hpp  SubItem.hpp  SubItemPresenterData.hpp  Util.hpp  WDBParseException.hpp  WorldDatabase.hpp  WorldDatabaseNode.hpp
lib/src/libWDB/: BinaryTreeNode.cpp  CMakeLists.txt  Color.cpp  GIFChunk.cpp  GIFImage.cpp  Group.cpp  NodeType.cpp  ParseResult.cpp  Parser.cpp  Serializer.cpp  SubGroup.cpp  SubItem.cpp  SubItemPresenterData.cpp  Util.cpp  WDBParseException.cpp  WorldDatabase.cpp  WorldDatabaseNode.cpp
test/: CMakeLists.txt  reconstruct.cpp
tools/: compare.py
